# SIGEMAIL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c  makefile  project_proposal.odt  project_report.odt  signature.c  signature.h  test.c
src/: crypto.h  db_utils.cpp  db_utils.h  device.cpp  device.h  device_record.cpp  device_record.h  dh.c  dh.cpp  dh.h  encrypt.c  encrypt.cpp  encrypt.h  error.h  hash.cpp  kdf.c  kdf.cpp  kdf.h  key_pack.cpp  key_pack.h  logging.h  main.cpp  message.cpp  message.h  protocol.cpp  protocol.h  protocol_state.h  secure_array.h  session.cpp  session.h  sign.cpp  test.c  test.h  user_record.cpp  user_record.h  zallocator.h
src/client/: client_network.cpp  client_network.h  client_state.cpp  client_state.h  device.cpp  device.h  device_record.cpp  device_record.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/server/: listener.cpp  listener.h  main.cpp  server_network.cpp  server_network.h  server_state.cpp  server_state.h
src/test/: base64_test.cpp  client_db_test.cpp  db_test.cpp  encrypt_test.cpp  hash_test.cpp  high_level_test.cpp  message_serialize_test.cpp  network_test.cpp  protocol_test.cpp  server_db_test.cpp  session_test.cpp  sign_test.cpp  test.cpp  test.h
src/ui/: main_window.cpp  main_window.h
